--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.15",
     "morgan": "^1.9.1"
   }
